--- a/src/bomisoft_version/Podglad.form
+++ b/src/bomisoft_version/Podglad.form
@@ -241,8 +241,8 @@
             <Container class="javax.swing.JPanel" name="jPanel4">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab2">
-                    <Property name="tabTitle" type="java.lang.String" value="tab2"/>
+                  <JTabbedPaneConstraints tabName="Konfiguracja">
+                    <Property name="tabTitle" type="java.lang.String" value="Konfiguracja"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -263,8 +263,8 @@
             <Container class="javax.swing.JPanel" name="jPanel5">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="tab3">
-                    <Property name="tabTitle" type="java.lang.String" value="tab3"/>
+                  <JTabbedPaneConstraints tabName="Kontakt">
+                    <Property name="tabTitle" type="java.lang.String" value="Kontakt"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
